horizontal scroll fix

--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -1,7 +1,7 @@
 .wrapper
   margin: 0 auto
   max-width: 1000px
-  min-width: 350px
+  //min-width: 350px
   position: relative
   width: 90%
   +pie-clearfix
