--- a/app/assets/stylesheets/partials/_responsive.sass
+++ b/app/assets/stylesheets/partials/_responsive.sass
@@ -85,7 +85,7 @@
       display: block
       float: none
       padding-bottom: 20px
-      width: 100%
+      width: 95%
     h3
       padding-bottom: 3px
   #devise
